更新readme， 更新注释

--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:background="@color/gray9">
 
+<!--    标题栏-->
     <com.foodsharetest.android.widget.TitleLayout
         android:id="@+id/tl_title"
         android:layout_width="match_parent"
