--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--用来展示上图下字的fragment-->
+<!--用来展示中间的+号-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="center"
@@ -10,12 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        />
-    <TextView
-        android:id="@+id/tab_content_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:textColor="@android:color/darker_gray"
+        android:src="@drawable/add_box"
         />
 </LinearLayout>
