完成消息栏中通知和消息的recycleView展示；辅助开源库实现左滑删除Item的项目（其中用自定义的Adapter，并用自定义Listener接口实现）

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,7 @@
     <!--界面的padding-->
     <dimen name="padding_top_and_bottom">30dp</dimen>
     <dimen name="padding_left_and_right">15dp</dimen>
+
+    <!--消息框的上下margin-->
+    <dimen name="message_padding">3dp</dimen>
 </resources>
