--- a/app/src/main/res/layout/fragment_message_inform_pager.xml
+++ b/app/src/main/res/layout/fragment_message_inform_pager.xml
@@ -3,8 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="inform_pager"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_inform"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
