--- a/app/src/main/res/layout/activity_add_article.xml
+++ b/app/src/main/res/layout/activity_add_article.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddArticle">
+    tools:context=".ui.activity.AddArticle">
 
     <TextView
         android:layout_width="wrap_content"
