--- a/app/src/main/res/layout/fragment_shop_page.xml
+++ b/app/src/main/res/layout/fragment_shop_page.xml
@@ -1,11 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:gravity="center_vertical"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
+
+    <Button
+        android:id="@+id/find_all_user"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="商城"/>
+        android:text="查看全部User"/>
+    <Button
+        android:id="@+id/find_all_article"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查看全部article"/>
+    <Button
+        android:id="@+id/find_user_article"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查看该用户的所有article"/>
+    <Button
+        android:id="@+id/add"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加文章"/>
+    <Button
+        android:id="@+id/test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="test"/>
 </LinearLayout>
