--- a/app/src/main/res/layout/viewpager_recommend_pager.xml
+++ b/app/src/main/res/layout/viewpager_recommend_pager.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="recommend"/>
+    android:layout_height="match_parent"
+    android:background="@color/gray9">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_recommmend"
         android:layout_width="match_parent"
